feat: implement staff members resources
